[tool.poetry]
name = "trakt-to-serializd"
version = "0.0.3"
description = "Migrate watched shows from Trakt to Serializd"
authors = ["Velocidensity"]
license = "MIT"
readme = "README.md"
packages = [{include = "trakt_to_serializd"}]

[tool.poetry.dependencies]
python = "^3.10"
serializd-py = {git = "https://github.com/Velocidensity/serializd-py"}
rich = "^13.5.2"
httpx = "^0.24.1"
platformdirs = "^3.10.0"
click = "^8.1.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
pre-commit = "^2.20.0"
mypy = "^0.991"
ruff = "^0.0.286"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
trakt_to_serializd = "trakt_to_serializd.__main__:cli"

[tool.ruff]
lint.select = [
    "A",   # flake8-builtins
    "BLE", # flake8-blind-except
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle (Error)
    "F",   # pyflakes
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "RSE", # flake8-raise
    "SIM", # flake8-simplify
    "W"    # pycodestyle (Warning)
]
lint.ignore = [
    "SIM105", # suppressible-exception
]
line-length = 120

[tool.isort]
line_length = 120

[tool.pyright]
venvPath = [".venv"]

[tool.mypy]
pretty = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
